--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ twitter_username: mvieck3
 navigation:
  - title: Home
    url: /ProdiginousCreations/index.html
- - title: /ProdiginousCreations/Projects
+ - title: Projects
    url: /ProdiginousCreations/projects.html
  - title: About
    url: /ProdiginousCreations/about.html
